[package]
name = "ksan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kzen-paillier = "0.4.3"
k256 = "0.13.4"
rand = "0.8.5"
num-integer = "0.1.46"
num-traits = "0.2.19"
glass_pumpkin = "1.7.0"
rand_core = "0.9.3"
num-bigint = {version = "0.4.4", features = ["rand"]}
sha2 = "0.10.9"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
delegatable_credentials = "0.8.0"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.2"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
curv-kzen = "0.10.0"
mercurial-signature = "0.1.0"